--- a/example/client.html
+++ b/example/client.html
@@ -231,7 +231,8 @@
             }
 
             function auth() {
-                var token = '{"uid":"7f547901b02041ab8d7d3381d0703137", "token":"ec2fa7acc9d443489531b156077c09a1", "room_id":"a1b4bbec3f624ecf84858632a730c688"}'
+                // 請先拿到ticket 文件:https://gitlab.com/jetfueltw/cpw/alakazam/tree/develop#room
+                var token = '{"ticket":"ec2fa7acc9d443489531b156077c09a1", "room_id":"a1b4bbec3f624ecf84858632a730c688"}'
                 var headerBuf = new ArrayBuffer(rawHeaderLen);
                 var headerView = new DataView(headerBuf, 0);
                 var bodyBuf = textEncoder.encode(token);
