--- a/example/client.html
+++ b/example/client.html
@@ -128,8 +128,8 @@
     const packetOffset = 0;
     const headerOffset = 4;
     const opOffset = 6;
-    const host = "192.168.0.138"
-    // const host = "127.0.0.1"
+    // const host = "192.168.0.138"
+    const host = "127.0.0.1"
 
     var ws
     var textDecoder = new TextDecoder();
@@ -280,6 +280,9 @@
                 key: document.getElementById("key").value,
                 message: document.getElementById("btn-input").value
             }),
+            headers:{
+                "Authorization": "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE1NTcyMTE2NTAsIm5iZiI6MTU1NzIxMTY1MCwiaXNzIjoibG9naW4iLCJzZXNzaW9uX3Rva2VuIjoiZjc2OTYyM2Y0YTNlNDE4MWE4NzAwYWNkYTE3NzE1MmIiLCJkYXRhIjp7InVpZCI6IjEyNTdlN2Q5ZTFjOTQ0ZWY5YTZmMTI5Y2I5NDk1ZDAyIiwidXNlcm5hbWUiOiJyb290In19.7VJxH3tQpnJqWTlPbId7f0Rt7eQoaVvaJmbWxtHTqRU",
+            },
             contentType: "application/json; charset=utf-8",
             dataType: "json",
             success: function (data) {
