--- a/example/client.html
+++ b/example/client.html
@@ -130,8 +130,7 @@
     const opOffset = 6;
     // const host = "192.168.0.138"
     const host = "127.0.0.1"
-    const token = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE1NTcyMTE2NTAsIm5iZiI6MTU1NzIxMTY1MCwiaXNzIjoibG9naW4iLCJzZXNzaW9uX3Rva2VuIjoiZjc2OTYyM2Y0YTNlNDE4MWE4NzAwYWNkYTE3NzE1MmIiLCJkYXRhIjp7InVpZCI6IjEyNTdlN2Q5ZTFjOTQ0ZWY5YTZmMTI5Y2I5NDk1ZDAyIiwidXNlcm5hbWUiOiJyb290In19.7VJxH3tQpnJqWTlPbId7f0Rt7eQoaVvaJmbWxtHTqRU"
-
+    const token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1aWQiOiIxNWMzYzYxZjkwMGE0MzNmYjhmMWE5YjMxMTRjZjcyYyIsInNpdGVfY29kZSI6ImRlZmF1bHQiLCJzZXNzaW9uX2lkIjoiYmZkZTQ2YjhlY2MyNDM4OGE4Y2NmMGY4MzIyYTkwMTgiLCJpYXQiOjE1NjE0MjYzODl9.V-3Ucf1wM-bxJOePuqVVJkLjgMF-HNWyQ0W6NReA_OM"
 
     var ws
     var textDecoder = new TextDecoder();
@@ -209,9 +208,13 @@
                             var headerLen = dataView.getInt16(offset + headerOffset);
                             var op = dataView.getInt32(offset + opOffset);
 
+                            var msgBody = textDecoder.decode(data.slice(offset + headerLen, offset + packetLen));
                             if (op == 6) {
-                                var msgBody = textDecoder.decode(data.slice(offset + headerLen, offset + packetLen));
+                                messageReceived(msgBody);
+                                appendMsg(msgBody);
+                            }
 
+                            if (op == 9) {
                                 messageReceived(msgBody);
                                 appendMsg(msgBody);
                             }
